[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://objects/cell.tscn" type="PackedScene" id=2]
[ext_resource path="res://cards/card1.tscn" type="PackedScene" id=3]
[ext_resource path="res://cards/card2.tscn" type="PackedScene" id=4]
[ext_resource path="res://cards/card3.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/player.tscn" type="PackedScene" id=6]

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 360.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.356863, 0.607843, 0.835294, 1 )
_sections_unfolded = [ "Mouse" ]

[node name="board" type="Node2D" parent="."]
editor/display_folded = true

[node name="cell17" parent="board" instance=ExtResource( 2 )]
position = Vector2( 60, 400 )

[node name="cell30" parent="board" instance=ExtResource( 2 )]
position = Vector2( 60, 320 )

[node name="cell51" parent="board" instance=ExtResource( 2 )]
position = Vector2( 60, 240 )

[node name="cell23" parent="board" instance=ExtResource( 2 )]
position = Vector2( 60, 360 )

[node name="cell35" parent="board" instance=ExtResource( 2 )]
position = Vector2( 60, 280 )

[node name="cell55" parent="board" instance=ExtResource( 2 )]
position = Vector2( 60, 200 )

[node name="cell62" parent="board" instance=ExtResource( 2 )]
position = Vector2( 60, 160 )

[node name="cell2" parent="board" instance=ExtResource( 2 )]
position = Vector2( 100, 480 )

[node name="cell13" parent="board" instance=ExtResource( 2 )]
position = Vector2( 100, 440 )

[node name="cell16" parent="board" instance=ExtResource( 2 )]
position = Vector2( 100, 400 )

[node name="cell29" parent="board" instance=ExtResource( 2 )]
position = Vector2( 100, 320 )

[node name="cell54" parent="board" instance=ExtResource( 2 )]
position = Vector2( 100, 240 )

[node name="cell22" parent="board" instance=ExtResource( 2 )]
position = Vector2( 100, 360 )

[node name="cell32" parent="board" instance=ExtResource( 2 )]
position = Vector2( 100, 280 )

[node name="cell53" parent="board" instance=ExtResource( 2 )]
position = Vector2( 100, 200 )

[node name="cell61" parent="board" instance=ExtResource( 2 )]
position = Vector2( 100, 160 )

[node name="cell3" parent="board" instance=ExtResource( 2 )]
position = Vector2( 140, 480 )

[node name="cell11" parent="board" instance=ExtResource( 2 )]
position = Vector2( 140, 440 )

[node name="cell21" parent="board" instance=ExtResource( 2 )]
position = Vector2( 140, 400 )

[node name="cell41" parent="board" instance=ExtResource( 2 )]
position = Vector2( 140, 320 )

[node name="cell48" parent="board" instance=ExtResource( 2 )]
position = Vector2( 140, 240 )

[node name="cell27" parent="board" instance=ExtResource( 2 )]
position = Vector2( 140, 360 )

[node name="cell49" parent="board" instance=ExtResource( 2 )]
position = Vector2( 140, 200 )

[node name="cell57" parent="board" instance=ExtResource( 2 )]
position = Vector2( 140, 160 )

[node name="cell4" parent="board" instance=ExtResource( 2 )]
position = Vector2( 180, 480 )

[node name="cell8" parent="board" instance=ExtResource( 2 )]
position = Vector2( 180, 440 )

[node name="cell20" parent="board" instance=ExtResource( 2 )]
position = Vector2( 180, 400 )

[node name="cell46" parent="board" instance=ExtResource( 2 )]
position = Vector2( 180, 240 )

[node name="cell26" parent="board" instance=ExtResource( 2 )]
position = Vector2( 180, 360 )

[node name="cell44" parent="board" instance=ExtResource( 2 )]
position = Vector2( 180, 200 )

[node name="cell59" parent="board" instance=ExtResource( 2 )]
position = Vector2( 180, 160 )

[node name="cell5" parent="board" instance=ExtResource( 2 )]
position = Vector2( 220, 480 )

[node name="cell12" parent="board" instance=ExtResource( 2 )]
position = Vector2( 220, 440 )

[node name="cell18" parent="board" instance=ExtResource( 2 )]
position = Vector2( 220, 400 )

[node name="cell39" parent="board" instance=ExtResource( 2 )]
position = Vector2( 220, 320 )

[node name="cell43" parent="board" instance=ExtResource( 2 )]
position = Vector2( 220, 240 )

[node name="cell25" parent="board" instance=ExtResource( 2 )]
position = Vector2( 220, 360 )

[node name="cell33" parent="board" instance=ExtResource( 2 )]
position = Vector2( 220, 280 )

[node name="cell56" parent="board" instance=ExtResource( 2 )]
position = Vector2( 220, 200 )

[node name="cell63" parent="board" instance=ExtResource( 2 )]
position = Vector2( 220, 160 )

[node name="cell6" parent="board" instance=ExtResource( 2 )]
position = Vector2( 260, 480 )

[node name="cell9" parent="board" instance=ExtResource( 2 )]
position = Vector2( 260, 440 )

[node name="cell34" parent="board" instance=ExtResource( 2 )]
position = Vector2( 260, 280 )

[node name="cell52" parent="board" instance=ExtResource( 2 )]
position = Vector2( 260, 200 )

[node name="cell60" parent="board" instance=ExtResource( 2 )]
position = Vector2( 260, 160 )

[node name="cell7" parent="board" instance=ExtResource( 2 )]
position = Vector2( 300, 480 )

[node name="cell10" parent="board" instance=ExtResource( 2 )]
position = Vector2( 300, 440 )

[node name="cell15" parent="board" instance=ExtResource( 2 )]
position = Vector2( 300, 400 )

[node name="cell38" parent="board" instance=ExtResource( 2 )]
position = Vector2( 300, 320 )

[node name="cell24" parent="board" instance=ExtResource( 2 )]
position = Vector2( 300, 360 )

[node name="cell36" parent="board" instance=ExtResource( 2 )]
position = Vector2( 300, 280 )

[node name="cell50" parent="board" instance=ExtResource( 2 )]
position = Vector2( 300, 200 )

[node name="card1" parent="." instance=ExtResource( 3 )]
position = Vector2( 68, 570 )
scale = Vector2( 0.2, 0.2 )
_sections_unfolded = [ "Transform" ]
number = 1

[node name="card2" parent="." instance=ExtResource( 4 )]
position = Vector2( 140, 570 )
scale = Vector2( 0.2, 0.2 )
_sections_unfolded = [ "Transform" ]
number = 2

[node name="card4" parent="." instance=ExtResource( 4 )]
position = Vector2( 290, 570 )
scale = Vector2( 0.2, 0.2 )
_sections_unfolded = [ "Transform" ]
number = 2

[node name="card3" parent="." instance=ExtResource( 5 )]
position = Vector2( 213.6, 570 )
scale = Vector2( 0.2, 0.2 )
number = 3

[node name="player1" parent="." instance=ExtResource( 6 )]
position = Vector2( 220, 480 )
scale = Vector2( 2, 2 )
input_pickable = true
_sections_unfolded = [ "Pickable", "Transform" ]

[node name="player2" parent="." instance=ExtResource( 6 )]
position = Vector2( 100, 360 )
scale = Vector2( 2, 2 )
input_pickable = true
_sections_unfolded = [ "Pickable", "Transform" ]

[connection signal="clicked" from="board/cell17" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell30" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell51" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell23" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell35" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell55" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell62" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell2" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell13" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell16" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell29" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell54" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell22" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell32" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell53" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell61" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell3" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell11" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell21" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell41" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell48" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell27" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell49" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell57" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell4" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell8" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell20" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell46" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell26" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell44" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell59" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell5" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell12" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell18" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell39" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell43" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell25" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell33" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell56" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell63" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell6" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell9" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell34" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell52" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell60" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell7" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell10" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell15" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell38" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell24" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell36" to="." method="_on_cell_clicked"]
[connection signal="clicked" from="board/cell50" to="." method="_on_cell_clicked"]
[connection signal="selected_card" from="card1" to="." method="_on_card_selected_card"]
[connection signal="selected_card" from="card2" to="." method="_on_card_selected_card"]
[connection signal="selected_card" from="card4" to="." method="_on_card_selected_card"]
[connection signal="selected_card" from="card3" to="." method="_on_card_selected_card"]
[connection signal="player_selected" from="player1" to="." method="_on_player_player_selected"]
[connection signal="player_selected" from="player2" to="." method="_on_player_player_selected"]
